--- a/PromartTest.Job/appsettings.json
+++ b/PromartTest.Job/appsettings.json
@@ -10,7 +10,7 @@
   "SmtpOptions": {
     "EmailAccount": "promarttestemail@gmail.com",
     "EmailPassword": "ifmrrhleyddpxoqf",
-    "ReportAccount": "jeffreyrm96@gmail.com"
+    "ReportAccount": "franco.paredes@oechsle.pe"
   },
   "Logging": {
     "LogLevel": {
